Grafana-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: grafana
  type: NodePort  # Replace with service you want ClusterIp or NodePort or LoadBalancer
